                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 06-09-2004 changed: iTunes DAAP performance tweaks
  - 06-09-2004 changed: reset instead of powercycle after saving network settings
  - 06-09-2004 fixed: Issue with vertical alignment of text on controls (with references.xml)
  - 06-09-2004 fixed: Blackscreen on load if old skin was MediaCenter, and new version does not have the MediaCenter skin present
  - 05-09-2004 added: support for true type fonts in skins
  - 05-09-2004 added: <execute> tags to button controls for executing xbes/movies/scripts/audio
  - 05-09-2004 added: <aligny> tag to button controls for vertical alignment
  - 05-09-2004 fixed: Volume bar caused flashes when it disappeared + hid the OSD etc.
  - 04-09-2004 added: Add more network settings in GUI: FTP server, Web server, time synchronization
  - 03-09-2004 fixed: SMB did not handle files with non ASCII names properly (got NT_OBJECT_NOT_FOUND)
  - 03-09-2004 fixed: eliminate crash that occurs when loading wma files which have non ASCII characters in its tags
  - 02-09-2004 fixed: eliminate crash that occurs when loading m3u which have weird characters
  - 02-09-2004 added: grouping of controls
  - 02-09-2004 added: virtual keyboard now supports data entry with the numbers just like a cell phone. Also pressing "back" is same as backspace.
  - 02-09-2004 added: network settings in the GUI and remove them from XBoxMediaCenter.xml
  - 29-08-2004 added: applied patch for LCD-MOD contrast changes with minor modification.
  - 28-08-2004 changed: removed the need to restart because of audio channel mappings
  - 28-08-2004 changed: removed the need to restart because of hw ac3/dts output