@@ -89,6 +89,7 @@ protected:
   void         					OnPageDown();
 	int										m_iSpaceBetweenItems;
   int                   m_iOffset;
+	float									m_fSmoothScrollOffset;
   int                   m_iItemsPerPage;
   int                   m_iItemHeight;
   int                   m_iSelect;
