@@ -78,6 +78,7 @@ public:
 													const CStdString& strButtonFocus, const CStdString& strButton,
 													DWORD dwTextOffsetX,
 													DWORD dwTextOffsetY,
+													DWORD dwTextAlign,
 													const CStdString& strSelectBackground,
 													const CStdString& strSelectArrowLeft, const CStdString& strSelectArrowLeftFocus,
 													const CStdString& strSelectArrowRight, const CStdString& strSelectArrowRightFocus);
